Refactor of file walker algorithm